[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/MainFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://assets/48pt-theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://assets/fonts/AtlantisInternational-jen0.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[node name="Menu" type="PopupPanel"]
rect_min_size = Vector2( 1280, 800 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1276.0
margin_bottom = 796.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1252.0
margin_bottom = 772.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 752.0
rect_min_size = Vector2( 200, 750 )
custom_fonts/font = SubResource( 2 )
custom_constants/vseparation = 16
custom_constants/hseparation = 10

[node name="SaveMenu" type="Panel" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 204.0
margin_right = 204.0
margin_bottom = 752.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/SaveMenu"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/SaveMenu/MarginContainer"]
margin_left = 20.0
margin_right = 620.0
margin_bottom = 210.0

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/SaveMenu/MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "Save Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="MarginContainer/HBoxContainer/SaveMenu/MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 300.0
margin_bottom = 140.0
theme = ExtResource( 3 )
text = "Save Game"

[node name="SaveMessage" type="RichTextLabel" parent="MarginContainer/HBoxContainer/SaveMenu/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 600.0
margin_bottom = 210.0
rect_min_size = Vector2( 600, 0 )
theme = ExtResource( 3 )
fit_content_height = true

[node name="ItemMenu" type="Panel" parent="MarginContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 204.0
margin_bottom = 752.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ItemMenu"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ItemMenu/MarginContainer"]
margin_left = 20.0
margin_right = 820.0
margin_bottom = 745.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/ItemMenu/MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="ItemList" parent="MarginContainer/HBoxContainer/ItemMenu/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 800.0
margin_bottom = 685.0
rect_min_size = Vector2( 800, 600 )
theme = ExtResource( 3 )
auto_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ItemMenu/MarginContainer/VBoxContainer"]
margin_top = 705.0
margin_right = 800.0
margin_bottom = 745.0
rect_min_size = Vector2( 0, 40 )

[node name="UseButton" type="Button" parent="MarginContainer/HBoxContainer/ItemMenu/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 106.0
margin_bottom = 40.0
theme = ExtResource( 4 )
text = "Use Item"

[node name="StatusMenu" type="Panel" parent="MarginContainer/HBoxContainer"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/StatusMenu"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatusMenu/MarginContainer"]
margin_left = 20.0
margin_right = 169.0
margin_bottom = 73.0

[node name="PageLabel" type="Label" parent="MarginContainer/HBoxContainer/StatusMenu/MarginContainer/VBoxContainer"]
margin_right = 149.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "Status"

[node name="CharacterContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/StatusMenu/MarginContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 32

[node name="CharacterRow1" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatusMenu/MarginContainer/VBoxContainer/CharacterContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 32

[node name="CharacterRow2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/StatusMenu/MarginContainer/VBoxContainer/CharacterContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 32

[connection signal="item_selected" from="MarginContainer/HBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SaveMenu/MarginContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/ItemMenu/MarginContainer/VBoxContainer/Inventory" to="." method="_on_Inventory_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ItemMenu/MarginContainer/VBoxContainer/HBoxContainer/UseButton" to="." method="_on_UseButton_pressed"]
